Fixed overflow issue in firefox

--- a/sass/_mobile-menu.scss
+++ b/sass/_mobile-menu.scss
@@ -98,7 +98,7 @@
 
 .mobile-menu-overlay {
   position: absolute;
-  height: 100vh;
+  height: calc(100vh - $header-offset);
   width: 100%;
   background: black;
   opacity: 0;
