--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -38,7 +38,6 @@
 
 * {
   box-sizing: border-box;
-  overflow: auto;
 }
 
 section,
